...
    android:background="@android:color/transparent">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="Choisissez la difficulté" android:textSize="20sp" android:textStyle="bold"
        android:textColor="#FFEAEAEA" android:layout_marginBottom="48dp"/>

    <ImageButton android:id="@+id/btn_level_easy"
        android:layout_width="wrap_content" android:layout_height="56dp"
        android:adjustViewBounds="true" android:scaleType="fitCenter"
        android:background="@null" android:padding="0dp"
        android:layout_marginBottom="20dp"/>

    <ImageButton android:id="@+id/btn_level_medium"
...
